plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.144'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

// The core has no Minecraft dependency and is also compiled/tested on Java 21.
evaluationDependsOn(':core')

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-mc${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

sourceSets.main.resources {
    srcDir('src/generated/resources')
}

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            systemProperty 'firsttorch.devWindowLayout', 'left_two_thirds'
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
            sourceSet(project(':core').sourceSets.main)
        }
    }

    unitTest {
        testedMod = mods."${mod_id}"
        enable()
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // These are our own bundled classes, not an external published dependency.
    implementation project(':core').sourceSets.main.output
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'com.google.code.gson:gson:2.13.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('check').configure {
    dependsOn ':core:check', ':mc1211:check', ':mc262:check'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    systemProperty 'firsttorch.projectDir', projectDir.absolutePath
}

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

sourceSets.main.resources.srcDir generateModMetadata
// Migrated illustrations use runtime item models. Keep historical PNGs out of all packaged resources.
tasks.named('processResources', ProcessResources).configure {
    // Gameplay captures retain their approved pixels. All assembled diagrams render live.
    def captures = ['blaze_spawner.png', 'end_arrival_platform_capture.png',
                    'end_portal_active_capture.png', 'end_portal_room_capture.png',
                    'nether_fortress.png', 'nether_wart_garden.png', 'pumpkin_view_capture.png',
                    'stronghold_iron_door_capture.png', 'village_overview.png',
                    'end_battlefield.png', 'end_city_search.png', 'end_exit_portal.png',
                    'end_gateway_access.png', 'end_island_crossing.png', 'chorus_harvest.png']
    filesMatching('assets/firsttorch/textures/questpics/*.png') {
        if (!captures.contains(name)) exclude()
    }
}
// All curriculum artwork is owned by the native resources; archives are never build inputs.
neoForge.ideSyncTask generateModMetadata

tasks.named('jar', Jar).configure {
    // Merge our own core classes directly; native releases never contain nested JARs.
    from project(':core').sourceSets.main.output
    from('LICENSE') { into 'META-INF' }
    from('LICENSE-CODE') { into 'META-INF' }
    from('LICENSE-ASSETS.md') { into 'META-INF' }
    from('NOTICE.md') { into 'META-INF' }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
